update schedule, add appointments ob board

--- a/schedule/index.html
+++ b/schedule/index.html
@@ -32,59 +32,59 @@
 					<div class="controls__board-hour-select-list drop-list">
 						<div class="controls__board-hour-select-main">
 							<span>On time: </span>	
-							<select name="" id="controls__board-hour-select-start">
-								<option value="0">12am</option>
-								<option value="1">1am</option>
-								<option value="2">2am</option>
-								<option value="3">3am</option>
-								<option value="4">4am</option>
-								<option value="5">5am</option>
-								<option value="6">6am</option>
-								<option value="7">7am</option>
-								<option value="8">8am</option>
-								<option value="9" selected>9am</option>
-								<option value="10">10am</option>
-								<option value="11">11am</option>
-								<option value="12">12pm</option>
-								<option value="13">1pm</option>
-								<option value="14">2pm</option>
-								<option value="15">3pm</option>
-								<option value="16">4pm</option>
-								<option value="17">5pm</option>
-								<option value="18">6pm</option>
-								<option value="19">7pm</option>
-								<option value="20">8pm</option>
-								<option value="21">9pm</option>
-								<option value="22">10pm</option>
-								<option value="23">11pm</option>
-								<option value="24">12pm</option>
+							<select name="" class="controls__board-hour-select-select" id="controls__board-hour-select-start">
+								<option class="controls__board-hour-option" value="0">12am</option>
+								<option class="controls__board-hour-option" value="1">1am</option>
+								<option class="controls__board-hour-option" value="2">2am</option>
+								<option class="controls__board-hour-option" value="3">3am</option>
+								<option class="controls__board-hour-option" value="4">4am</option>
+								<option class="controls__board-hour-option" value="5">5am</option>
+								<option class="controls__board-hour-option" value="6">6am</option>
+								<option class="controls__board-hour-option" value="7">7am</option>
+								<option class="controls__board-hour-option" value="8">8am</option>
+								<option class="controls__board-hour-option" value="9" selected>9am</option>
+								<option class="controls__board-hour-option" value="10">10am</option>
+								<option class="controls__board-hour-option" value="11">11am</option>
+								<option class="controls__board-hour-option" value="12">12pm</option>
+								<option class="controls__board-hour-option" value="13">1pm</option>
+								<option class="controls__board-hour-option" value="14">2pm</option>
+								<option class="controls__board-hour-option" value="15">3pm</option>
+								<option class="controls__board-hour-option" value="16">4pm</option>
+								<option class="controls__board-hour-option" value="17">5pm</option>
+								<option class="controls__board-hour-option" value="18">6pm</option>
+								<option class="controls__board-hour-option" value="19">7pm</option>
+								<option class="controls__board-hour-option" value="20">8pm</option>
+								<option class="controls__board-hour-option" value="21">9pm</option>
+								<option class="controls__board-hour-option"value="22">10pm</option>
+								<option class="controls__board-hour-option" value="23">11pm</option>
+								<option class="controls__board-hour-option" value="24">12pm</option>
 							</select>
-							<select name="" id="controls__board-hour-select-end">
-								<option value="0">12am</option>
-								<option value="1">1am</option>
-								<option value="2">2am</option>
-								<option value="3">3am</option>
-								<option value="4">4am</option>
-								<option value="5">5am</option>
-								<option value="6">6am</option>
-								<option value="7">7am</option>
-								<option value="8">8am</option>
-								<option value="9">9am</option>
-								<option value="10">10am</option>
-								<option value="11">11am</option>
-								<option value="12">12pm</option>
-								<option value="13">1pm</option>
-								<option value="14">2pm</option>
-								<option value="15">3pm</option>
-								<option value="16">4pm</option>
-								<option value="17">5pm</option>
-								<option value="18" selected>6pm</option>
-								<option value="19">7pm</option>
-								<option value="20">8pm</option>
-								<option value="21">9pm</option>
-								<option value="22">10pm</option>
-								<option value="23">11pm</option>
-								<option value="24">12pm</option>
+							<select name="" class="controls__board-hour-select-select" id="controls__board-hour-select-end">
+								<option class="controls__board-hour-option"  value="0">12am</option>
+								<option class="controls__board-hour-option"  value="1">1am</option>
+								<option class="controls__board-hour-option"  value="2">2am</option>
+								<option class="controls__board-hour-option"  value="3">3am</option>
+								<option class="controls__board-hour-option"  value="4">4am</option>
+								<option class="controls__board-hour-option"  value="5">5am</option>
+								<option class="controls__board-hour-option"  value="6">6am</option>
+								<option class="controls__board-hour-option"  value="7">7am</option>
+								<option class="controls__board-hour-option"  value="8">8am</option>
+								<option class="controls__board-hour-option"  value="9">9am</option>
+								<option class="controls__board-hour-option"  value="10">10am</option>
+								<option class="controls__board-hour-option"  value="11">11am</option>
+								<option class="controls__board-hour-option"  value="12">12pm</option>
+								<option class="controls__board-hour-option"  value="13">1pm</option>
+								<option class="controls__board-hour-option"  value="14">2pm</option>
+								<option class="controls__board-hour-option"  value="15">3pm</option>
+								<option class="controls__board-hour-option"  value="16">4pm</option>
+								<option class="controls__board-hour-option"  value="17">5pm</option>
+								<option class="controls__board-hour-option"  value="18" selected>6pm</option>
+								<option class="controls__board-hour-option"  value="19">7pm</option>
+								<option class="controls__board-hour-option"  value="20">8pm</option>
+								<option class="controls__board-hour-option"  value="21">9pm</option>
+								<option class="controls__board-hour-option"  value="22">10pm</option>
+								<option class="controls__board-hour-option"  value="23">11pm</option>
+								<option class="controls__board-hour-option"  value="24">12pm</option>
 							</select>
 						</div>
 						<div class="controls__board-hour-select-btn-apply">
@@ -130,7 +130,7 @@
 				<div class="controls__date-picker">
 					<div class="controls__date-picker-item ">
 						<p class="controls__date-picker-date">
-							Mar 01, 2020
+							Mar 14, 2020
 						</p>
 						<svg width="13" height="16" viewBox="0 0 13 16" fill="none" xmlns="http://www.w3.org/2000/svg">
 							<path fill-rule="evenodd" clip-rule="evenodd" d="M3.08046 2.22566V0H4.73441V2.22566H8.38961V0H10.0436V2.22566H13V16H0V2.22566H3.08046ZM11.7595 14.6857H1.24046V5.00332H11.7595V14.6857Z" fill="#8391AD"/>
@@ -256,91 +256,6 @@
 				</div>
 			</div>
 			<div class="board__items">
-				<div class="boards__item">
-					<div class="boards__item-area">
-						<div class="boards__item-area_left">
-							<div class="boards__item-area-btn-hide">
-								<svg width="14" height="12" viewBox="0 0 14 12" fill="none" xmlns="http://www.w3.org/2000/svg">
-									<path d="M7 12L1.04907e-06 -1.22392e-06L14 0L7 12Z" fill="black"/>
-								</svg>	
-							</div>
-							<p class="boards__item-area-town">
-								Miami, FL
-							</p>
-						</div>
-						<div class="boards__item-area_right">
-							<p class="boards__item-area-time">
-								Friday, March 06, 2020 9:30
-							</p>
-						</div>
-					</div>
-					<div class="boards__board board"> 
-						<div class="board__table">
-							<div class="board__row">
-								<div class="board__aside">
-									<div class="board__worker ">
-										<div class="board__worker-img">
-											<img src="./images/profile_bg.jpg" alt="">
-										</div>
-										<div class="board__worker-info">
-											<p class="board__worker-nickname">
-												Gary
-											</p>
-											<p class="board__worker-name-surname">
-												Igor Nelson
-											</p>
-											<p class="board__worker-post">
-												Appliance Technician
-											</p>
-										</div>
-									</div>
-								</div>
-								<div class="board__main">
-									<div class="board__timegrid timegrid">
-										<div class="timegrid__row">
-
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="board__row">
-								<div class="board__aside">
-									<div class="board__worker ">
-										<div class="board__worker-img">
-											<img src="./images/profile_bg.jpg" alt="">
-										</div>
-										<div class="board__worker-info">
-											<p class="board__worker-nickname">
-												Agustina
-											</p>
-											<p class="board__worker-name-surname">
-												Andriy Nelson
-											</p>
-											<p class="board__worker-post">
-												Appliance Technician
-											</p>
-										</div>
-									</div>
-								</div>
-								<div class="board__main">
-									<div class="board__timegrid timegrid">
-										<div class="timegrid__row">
-
-										</div>
-										<div class="appoitments">
-											<div class="appointment">
-												
-											</div>
-										</div>
-									</div>
-								</div>
-							</div>
-							<div class="timegrid__realtime-line">
-
-							</div>
-						</div>
-					</div>
-				</div>
 
 			</div>
 		</section>
