--- a/schedule/index.html
+++ b/schedule/index.html
@@ -12,7 +12,7 @@
     </script>
 </head>
 <body>
-	<div class="frame-content" onclick="void(0);">
+	<div class="frame-content" onclick="void(0);" onselectstart="return false">
 		<section class="controls">
 			<div class="controls__item controls__item_left">
 				<div class="controls__search search">
