--- a/schedule/index.html
+++ b/schedule/index.html
@@ -271,6 +271,19 @@
 
 			</div>
 		</section>
+		<section class="popup-window">
+			<div class="popup-window__overlay">
+
+			</div>
+			<div class="drag-and-drop-confirmation-popup">
+				<div class="drag-and-drop-confirmation-popup__confirm-btn">
+					yes
+				</div>
+				<div class="drag-and-drop-confirmation-popup__deny-btn">
+					no
+				</div>
+			</div>
+		</section>
 	</div>
 	<script>
 	</script>
