--- a/schedule/index.html
+++ b/schedule/index.html
@@ -275,12 +275,71 @@
 			<div class="popup-window__overlay">
 
 			</div>
-			<div class="drag-and-drop-confirmation-popup">
-				<div class="drag-and-drop-confirmation-popup__confirm-btn">
-					yes
+			<div class=" drag-and-drop-confirmation drag-and-drop-confirmation-popup">
+				<div class="drag-and-drop-confirmation__header">
+					<p class="drag-and-drop-confirmation__job-number">
+
+					</p>
+					<div class="drag-and-drop-confirmation__appointment-info">
+						<p class="drag-and-drop-confirmation__appointment-info-text">Reschedule:</p>
+						<div class="drag-and-drop-confirmation__appointment-info-item">
+							<span>To: </span>
+							<div class="drag-and-drop-confirmation__date-new">
+					
+							</div>
+							<p class="drag-and-drop-confirmation__service-resource-nickname-new">
+		
+							</p>
+						</div>
+						<div class="drag-and-drop-confirmation__appointment-info-item">
+							<span>From: </span>
+							<div class="drag-and-drop-confirmation__date-old">
+
+							</div>
+							<p class="drag-and-drop-confirmation__service-resource-nickname-old">
+		
+							</p>
+						</div>
+					</div>
 				</div>
-				<div class="drag-and-drop-confirmation-popup__deny-btn">
-					no
+				
+				<div class="drag-and-drop-confirmation__questions-wrapper">
+					<div class="drag-and-drop-confirmation__questions">
+						<div class="drag-and-drop-confirmation__questions-item">
+							<label class="questions-item">Client stay informed
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+						<div class="drag-and-drop-confirmation__questions-item">
+							<label class="questions-item">Service resource stay informed
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+					</div>
+					<div class="drag-and-drop-confirmation__questions">
+						<div class="drag-and-drop-confirmation__questions-item drag-and-drop-confirmation__questions-item_client">
+							<label class="questions-item">Send notification client
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+						<div class="drag-and-drop-confirmation__questions-item drag-and-drop-confirmation__questions-item_service-resource">
+							<label class="questions-item">Send notification service resource
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+					</div>
+				</div>	
+				<div class="drag-and-drop-confirmation__btns">
+					<div class="drag-and-drop-confirmation-popup__deny-btn">
+						Cancel
+					</div>
+					<div class="drag-and-drop-confirmation-popup__confirm-btn">
+						Save
+					</div>
 				</div>
 			</div>
 		</section>
