--- a/schedule/index.html
+++ b/schedule/index.html
@@ -343,6 +343,23 @@
 				</div>
 			</div>
 		</section>
+		<div class="appointment-hover">
+			<div class="appointment-hover__job">
+				<p class="appointment-hover__job-number">
+
+				</p>
+				<p class="appointment-hover__job-info">
+					
+				</p>
+			</div>
+			<p class="appointment-hover__zip">
+
+			</p>
+		</div>
+		<div class="appointment-drop-list">
+			<p class="appointment-drop-list__item">Send appointment</p>
+			<p class="appointment-drop-list__item">Open document</p>
+		</div>
 	</div>
 	<script>
 	</script>
