--- a/schedule/index.html
+++ b/schedule/index.html
@@ -302,7 +302,6 @@
 						</div>
 					</div>
 				</div>
-				
 				<div class="drag-and-drop-confirmation__questions-wrapper">
 					<div class="drag-and-drop-confirmation__questions">
 						<div class="drag-and-drop-confirmation__questions-item drag-and-drop-confirmation__questions-item_client-informed">
@@ -334,10 +333,86 @@
 					</div>
 				</div>	
 				<div class="drag-and-drop-confirmation__btns">
-					<div class="drag-and-drop-confirmation-popup__deny-btn">
+					<div class="drag-and-drop-confirmation__deny-btn">
 						Cancel
 					</div>
-					<div class="drag-and-drop-confirmation-popup__confirm-btn btn_disabled">
+					<div class="drag-and-drop-confirmation__confirm-btn btn_disabled">
+						Save
+					</div>
+				</div>
+			</div>
+			<div class="appointment-send-notification-confirmation appointment-send-notification-confirmation-popup">
+				<div class="appointment-send-notification-confirmation__btns">
+					<div class="appointment-send-notification-confirmation__deny-btn">
+						Cancel
+					</div>
+					<div class="appointment-send-notification-confirmation__confirm-btn">
+						Send
+					</div>
+				</div>
+			</div>
+			<div class="appointment-reschedule-confirmation appointment-reschedule-confirmation-popup">
+				<div class="appointment-reschedule-confirmation__header">
+					<p class="appointment-reschedule-confirmation__job-number">
+
+					</p>
+					<div class="appointment-reschedule-confirmation__appointment-info">
+						<p class="appointment-reschedule-confirmation__appointment-info-text">Reschedule:</p>
+						<div class="appointment-reschedule-confirmation__appointment-info-item">
+							<span>To: </span>
+							<div class="appointment-reschedule-confirmation__date-new">
+					
+							</div>
+							<p class="appointment-reschedule-confirmation__service-resource-nickname-new">
+		
+							</p>
+						</div>
+						<div class="appointment-reschedule-confirmation__appointment-info-item">
+							<span>From: </span>
+							<div class="appointment-reschedule-confirmationn__date-old">
+
+							</div>
+							<p class="appointment-reschedule-confirmation__service-resource-nickname-old">
+		
+							</p>
+						</div>
+					</div>
+				</div>
+				<div class="appointment-reschedule-confirmation__questions-wrapper">
+					<div class="appointment-reschedule-confirmation__questions">
+						<div class="appointment-reschedule-confirmation__questions-item appointment-reschedule-confirmation__questions-item_client-informed">
+							<label class="questions-item">Client stay informed
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+						<div class="appointment-reschedule-confirmation__questions-item appointment-reschedule-confirmation__questions-item_service-resource-informed">
+							<label class="questions-item">Service resource stay informed
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+					</div>
+					<div class="appointment-reschedule-confirmation__questions">
+						<div class="appointment-reschedule-confirmation__questions-item appointment-reschedule-confirmation__questions-item_client-notification">
+							<label class="questions-item">Send notification client
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+						<div class="appointment-reschedule-confirmation__questions-item appointment-reschedule-confirmation__questions-item_service-resource-notification">
+							<label class="questions-item">Send notification service resource
+								<input class="questions-item__checkbox" type="checkbox">
+								<span class="questions-item__checkmark"></span>
+							</label> 
+						</div>
+					</div>
+				</div>	
+				<div class="appointment-reschedule-confirmation__btns">
+					<div class="appointment-reschedule-confirmation__deny-btn">
+						Cancel
+					</div>
+					<div class="appointment-reschedule-confirmation__confirm-btn btn_disabled">
 						Save
 					</div>
 				</div>
@@ -355,8 +430,9 @@
 			</p>
 		</div>
 		<div class="appointment-drop-list">
-			<p class="appointment-drop-list__item">Send appointment</p>
-			<p class="appointment-drop-list__item">Open document</p>
+			<p class="appointment-drop-list__item">Open</p>
+			<p class="appointment-drop-list__item appointment-drop-list__item-reschedule">Reschedule</p>
+			<p class="appointment-drop-list__item appointment-drop-list__item-send-notification">Send to Technician</p>
 		</div>
 	</div>
 	<script>
