--- a/schedule/index.html
+++ b/schedule/index.html
@@ -663,12 +663,13 @@
 				</div>
 				<div class="appointment-cancel-confirmation__questions-wrapper">
 					<div class="appointment-cancel-confirmation__questions-item appointment-cancel-confirmation__questions-item_cancel-confirm">
-						<label class="questions-item">Cancel
+						<label class="questions-item">Cancel appointment
 							<input class="questions-item__checkbox" type="checkbox">
 							<span class="questions-item__checkmark"></span>
 						</label> 
 					</div>
 					<div class="appointment-cancel-confirmation__questions-item appointment-cancel-confirmation__questions-item_cancel-reason">
+						<p class="appointment-cancel-confirmation__questions-item_cancel-reason">Reason of cancelation:</p>
 						<textarea name="" id="" cols="30" rows="10" class="appointment-cancel-confirmation__questions-item_cancel-reason-textarea"></textarea>
 					</div>
 					<div class="appointment-cancel-confirmation__questions">
