--- a/schedule/index.html
+++ b/schedule/index.html
@@ -311,13 +311,13 @@
 				<div class="drag-and-drop-confirmation__questions-wrapper">
 					<div class="drag-and-drop-confirmation__questions">
 						<div class="drag-and-drop-confirmation__questions-item drag-and-drop-confirmation__questions-item_client-informed">
-							<label class="questions-item">Client stay informed
+							<label class="questions-item">I understand that the customer must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
 						</div>
 						<div class="drag-and-drop-confirmation__questions-item drag-and-drop-confirmation__questions-item_service-resource-informed">
-							<label class="questions-item">Service resource stay informed
+							<label class="questions-item">I understand that the technician must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
@@ -613,13 +613,13 @@
 				<div class="appointment-reschedule-confirmation__questions-wrapper">
 					<div class="appointment-reschedule-confirmation__questions">
 						<div class="appointment-reschedule-confirmation__questions-item appointment-reschedule-confirmation__questions-item_client-informed">
-							<label class="questions-item">Client stay informed
+							<label class="questions-item">I understand that the customer must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
 						</div>
 						<div class="appointment-reschedule-confirmation__questions-item appointment-reschedule-confirmation__questions-item_service-resource-informed">
-							<label class="questions-item">Service resource stay informed
+							<label class="questions-item">I understand that the technician must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
@@ -677,13 +677,13 @@
 					</div>
 					<div class="appointment-cancel-confirmation__questions">
 						<div class="appointment-cancel-confirmation__questions-item appointment-cancel-confirmation__questions-item_client-informed">
-							<label class="questions-item">Client stay informed
+							<label class="questions-item">I understand that the customer must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
 						</div>
 						<div class="appointment-cancel-confirmation__questions-item appointment-cancel-confirmation__questions-item_service-resource-informed">
-							<label class="questions-item">Service resource stay informed
+							<label class="questions-item">I understand that the technician must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
@@ -736,7 +736,7 @@
 				</div>	
 				<div class="absence-cancel-confirmation__cancel-failed">
 					<p class="absence-cancel-confirmation__cancel-failed-text">
-						This Absnece cannot be canceled
+						This Absnece can't canceled
 					</p>
 				</div>
 				<div class="absence-cancel-confirmation__questions-wrapper">
@@ -746,7 +746,7 @@
 					</div>
 					<div class="absence-cancel-confirmation__questions">
 						<div class="absence-cancel-confirmation__questions-item absence-cancel-confirmation__questions-item_service-resource-informed">
-							<label class="questions-item">Service resource stay informed
+							<label class="questions-item">I understand that the technician must be informed of the changes 
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
@@ -1020,13 +1020,18 @@
 				</div>
 				<div class="absence-change-confirmation__date-failed">
 					<p class="absence-change-confirmation__date-failed-text">
-						Incorrect Date 
+						Incorrect Date/Time
+					</p>
+				</div>
+				<div class="absence-change-confirmation__date-blocked">
+					<p class="absence-change-confirmation__date-blocked-text">
+						This absence can't be changed
 					</p>
 				</div>
 				<div class="absence-change-confirmation__questions-wrapper">
 					<div class="absence-change-confirmation__questions">
 						<div class="absence-change-confirmation__questions-item absence-change-confirmation__questions-item_service-resource-informed">
-							<label class="questions-item">Service resource stay informed
+							<label class="questions-item">I understand that the technician must be informed of the changes
 								<input class="questions-item__checkbox" type="checkbox">
 								<span class="questions-item__checkmark"></span>
 							</label> 
@@ -1067,6 +1072,10 @@
 			<p class="absence-drop-list__item absence-drop-list__item-cancel">
 				Cancel
 			</p>
+		</div>
+		<div class="service-resource-drop-list">
+			<p class="service-resource-drop-list__item service-resource-drop-list__item-create-absence">Create Absence</p>
+			<p class="service-resource-drop-list__item service-resource-drop-list__item-additional-time">Additional Time</p>
 		</div>
 	</div>
 	<script>
