--- a/schedule/index.html
+++ b/schedule/index.html
@@ -736,7 +736,7 @@
 				</div>	
 				<div class="absence-cancel-confirmation__cancel-failed">
 					<p class="absence-cancel-confirmation__cancel-failed-text">
-						This Absnece can't canceled
+						This absence can't be canceled
 					</p>
 				</div>
 				<div class="absence-cancel-confirmation__questions-wrapper">
