--- a/bingo/index.html
+++ b/bingo/index.html
@@ -8,7 +8,7 @@
 	<meta name="theme-color" content="#ffffff">
 
 	<link href="https://fonts.googleapis.com/css2?family=Poppins:wght@600&family=Roboto:ital@1&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="/bingo/css/main.css" type=“text/css” >
+	<link rel="stylesheet" href="/bingo/css/main.css">
 
     </script>
 </head>
