--- a/tretyakov/index.html
+++ b/tretyakov/index.html
@@ -118,7 +118,7 @@
 						</span>
 						Третьяковская галерея
 					</p>
-					<a class="paintings__item-link" href="/painting.html"></a>
+					<a class="paintings__item-link" href="./painting.html"></a>
 				</div>
 				<div class="paintings__item">
 					<div class="paintings__item-img img_zoom">
@@ -140,7 +140,7 @@
 						</span>
 						Третьяковская галерея
 					</p>
-					<a class="paintings__item-link" href="/painting.html"></a>
+					<a class="paintings__item-link" href="./painting.html"></a>
 				</div>
 				<div class="paintings__item">
 					<div class="paintings__item-img img_zoom">
@@ -162,7 +162,7 @@
 						</span>
 						Третьяковская галерея
 					</p>
-					<a class="paintings__item-link" href="/painting.html"></a>
+					<a class="paintings__item-link" href="./painting.html"></a>
 				</div>
 				<div class="paintings__item   paintings__quote">
 					<p class="paintings__quote-text">
